Issue #3055737 by mohammad faqeh: Fix card deck and space under card image on IE

--- a/VARTHEME_BS4_SUBTHEME/scss/base/vartheme_bs4.base.scss
+++ b/VARTHEME_BS4_SUBTHEME/scss/base/vartheme_bs4.base.scss
@@ -621,3 +621,15 @@ pre {
     display: none;
   }
 }
+
+// Fixed card deck and space under img card on IE.
+.card-deck {
+  display: block;
+}
+
+.card {
+  .card-top-image {
+    max-width: 100%;
+    flex-shrink: 0;
+  }
+}
